fix various bugs

--- a/cpp/configs/wasm.config
+++ b/cpp/configs/wasm.config
@@ -1,4 +1,5 @@
 CONFIG_DEBUG=true
+CONFIG_STRICT=true
 CONFIG_CC=/usr/lib/emscripten/em++
 CONFIG_CFLAGS=-include emscripten.h -DFIBRE_PUBLIC=EMSCRIPTEN_KEEPALIVE -s RESERVED_FUNCTION_POINTERS=1
 CONFIG_LDFLAGS=-s EXPORT_ES6=1 -s MODULARIZE=1 -s USE_ES6_IMPORT_META=0 -s 'EXTRA_EXPORTED_RUNTIME_METHODS=[addFunction, stringToUTF8Array, UTF8ArrayToString, ENV]'
