--- a/cpp/configs/windows-amd64.config
+++ b/cpp/configs/windows-amd64.config
@@ -1,4 +1,5 @@
 CONFIG_DEBUG=false
+CONFIG_STRICT=true
 CONFIG_CC="x86_64-w64-mingw32-g++"
 CONFIG_CFLAGS="-I$THIRD_PARTY./third_party/libusb-windows/libusb-1.0.23/include/libusb-1.0"
 CONFIG_LDFLAGS="-static-libgcc $THIRD_PARTY./third_party/libusb-windows/libusb-1.0.23/MinGW64/static/libusb-1.0.a"
