New autogen architecture
This rework prepares Fibre servers for the upcoming
rework of the low level protocol (that will add remote
coroutine call support) and the rework of the object
model (that add support for dynamically adding/removing
objects).

It also decouples the user's server application from
autogenerated Fibre interfaces such that user classes
no longer need to inherit from autogenerated classes.
This is expected to reduce compile time and improve
user code organization.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -54,7 +54,7 @@
             "name": "C++ Test Server",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/test/test_server.elf",
+            "program": "${workspaceFolder}/test/build/test_server.elf",
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/test",
             "environment": [{"name": "FIBRE_LOG", "value": "5"}],
