Major protocol rework
 - low level protocol initial implementation of connection-based multi-layer frame stream protocol
 - libfibre API: call input/output args are passed through lists of tasks
 - adapters: initial implementation of CAN adapter
 - platform support: initial implementation of SocketCAN backend

The client side is backwards compatible with the endpoint based legacy protocol.
The server side is currently not backwards compatible but this will be added in a future commit.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "fibre-shell",
+            "name": "fibre-shell (libfibre)",
             "type": "cppdbg",
             "request": "launch",
             "program": "/usr/bin/python",
@@ -28,7 +28,14 @@
             }
         },
         {
-            "name": "Python Test Client",
+            "name": "fibre-shell (PyFibre)",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/tools/fibre-shell",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Python Test Client (libfibre)",
             "type": "cppdbg",
             "request": "launch",
             "program": "/usr/bin/python",
@@ -51,6 +58,14 @@
             }
         },
         {
+            "name": "Python Test Client (Python)",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/test/test_client.py",
+            "env": {"FIBRE_LOG": "5"},
+            "console": "integratedTerminal"
+        },
+        {
             "name": "C++ Test Server",
             "type": "cppdbg",
             "request": "launch",
@@ -60,7 +75,7 @@
             "environment": [{"name": "FIBRE_LOG", "value": "5"}],
             "externalConsole": false,
             "MIMode": "gdb",
-            "args": ["--server", "--domain", "tcp-server:address=localhost,port=14220"],
+            "args": ["--server", "--domain", "tcp-server:address=localhost,port=14220,can:if=vcan0"],
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
