--- a/cpp/configs/linux-aarch64.config
+++ b/cpp/configs/linux-aarch64.config
@@ -2,6 +2,6 @@ CONFIG_DEBUG=false
 CONFIG_STRICT=true
 CONFIG_CC="aarch64-linux-gnu-g++"
 CONFIG_BINUTILS_PREFIX="aarch64-linux-gnu-"
-CONFIG_CFLAGS="-I$THIRD_PARTY./third_party/libusb-dev-aarch64/usr/include/libusb-1.0"
+CONFIG_CFLAGS="-I$THIRD_PARTY./third_party/libusb-dev-aarch64/usr/include/libusb-1.0 -Wno-maybe-uninitialized"
 CONFIG_LDFLAGS="$THIRD_PARTY./third_party/libusb-aarch64/usr/lib/aarch64-linux-gnu/libusb-1.0.so.0"
 CONFIG_USE_PKGCONF=false
