--- a/cpp/configs/wasm.config
+++ b/cpp/configs/wasm.config
@@ -2,5 +2,5 @@ CONFIG_DEBUG=true
 CONFIG_STRICT=true
 CONFIG_CC=/usr/lib/emscripten/em++
 CONFIG_CFLAGS=-include emscripten.h -DFIBRE_PUBLIC=EMSCRIPTEN_KEEPALIVE -s RESERVED_FUNCTION_POINTERS=1 -fno-exceptions -s NO_FILESYSTEM=1
-CONFIG_LDFLAGS=-s EXPORT_ES6=1 -s MODULARIZE=1 -s USE_ES6_IMPORT_META=0 -s 'EXTRA_EXPORTED_RUNTIME_METHODS=[addFunction, stringToUTF8Array, UTF8ArrayToString, ENV]' -s 'EXPORTED_FUNCTIONS=[_malloc, _free]' -Wl,--allow-undefined-file=test.txt -s ERROR_ON_UNDEFINED_SYMBOLS=0 -Wl,--unresolved-symbols=import-functions
+CONFIG_LDFLAGS=-s EXPORT_ES6=1 -s MODULARIZE=1 -s USE_ES6_IMPORT_META=0 -s 'EXTRA_EXPORTED_RUNTIME_METHODS=[addFunction, stringToUTF8Array, UTF8ArrayToString, ENV]' -s 'EXPORTED_FUNCTIONS=[_malloc, _free]' -s ERROR_ON_UNDEFINED_SYMBOLS=0 -Wl,--unresolved-symbols=import-functions
 CONFIG_USE_PKGCONF=false
