--- a/cpp/configs/wasm.config
+++ b/cpp/configs/wasm.config
@@ -2,5 +2,5 @@ CONFIG_DEBUG=true
 CONFIG_STRICT=true
 CONFIG_CC=/usr/lib/emscripten/em++
 CONFIG_CFLAGS=-include emscripten.h -DFIBRE_PUBLIC=EMSCRIPTEN_KEEPALIVE -fno-exceptions
-CONFIG_LDFLAGS=-s EXPORT_ES6=1 -s MODULARIZE=1 -s USE_ES6_IMPORT_META=0 -s 'EXPORTED_RUNTIME_METHODS=[addFunction, stringToUTF8, lengthBytesUTF8, UTF8ArrayToString, ENV]' -s 'EXPORTED_FUNCTIONS=[_malloc, _free]' -s ERROR_ON_UNDEFINED_SYMBOLS=1 --js-library platform_support/dom_connector.js -fno-exceptions -s NO_FILESYSTEM=1
+CONFIG_LDFLAGS=-s EXPORT_ES6=1 -s MODULARIZE=1 -s USE_ES6_IMPORT_META=0 -s RESERVED_FUNCTION_POINTERS=1 -s 'EXPORTED_RUNTIME_METHODS=[addFunction, stringToUTF8, lengthBytesUTF8, UTF8ArrayToString, ENV]' -s 'EXPORTED_FUNCTIONS=[_malloc, _free]' -s ERROR_ON_UNDEFINED_SYMBOLS=1 --js-library platform_support/dom_connector.js -fno-exceptions -s NO_FILESYSTEM=1
 CONFIG_USE_PKGCONF=false
